# mlsys26-agent-baseline

./: README.md  pyproject.toml
agent/: api.py  eval.py  evolve_agent.py  ga_agent.py  main.py  modal_eval.py  utils.py
config/: config_ga.yaml
prompt/: ga_prompt.py  proposer_prompt.py
